src/style.css
/* ... */
.add-section-button:hover {
  transform: rotate(90deg);
}

.section {
  padding-bottom: 50px;
}

.header-all-tasks {
  background-color: var(--secondary-color-light);
}

.header-today {
  background-color: var(--tertiary-color-light);
}

.header-week {
  background-color: var(--primary-color-light);
}

.header-important {
  background-color: var(--yellow-color);
}

.header-project {
  background-color: var(--secondary-color-light);
}

#floatingActionButton {
  position: absolute;
  bottom: 0;
  right: 0;
}

.add-task-form-container{
  margin-top: 20px;
  border: solid 1px var(--hover-light);
  border-radius: 4px;
  box-sizing: border-box;
  padding: 10px;
}

.task-description-input{
  width: 100%;
  box-sizing: border-box;
  padding: 9px 7px 9px 7px;
  outline: none;
  border: none;
  border-radius: 5px;
  font-size: 14rem;
  border: solid 1px var(--hover-light);
}

.task-data{
  display: flex;
  align-items: center;
  gap: 7px;
  padding-bottom: 15px;
}

.add-task-form-buttons{
  display: flex;
  gap: 6px;
  justify-content: end;
  align-items: center;
  border-top: 1px solid var(--hover-light);
  box-sizing: border-box;
  padding: 15px 0px 5px 0px ;
}

.add-task-form-btn{
  border: none;
  outline: none;
  padding: 7px 20px;
  border-radius: 3px;
  background-color: var(--secondary-color-light);
  color: var(--text-dark);
  font-family: 'TTSemiBold';
}

.add-task-form-btn:hover{
  background-color: #01a17c;
}

.cancel-task-btn{
  border: none;
  outline: none;
  padding: 7px 20px;
  border-radius: 3px;
  background-color: var(--tertiary-color-light);
  color: var(--text-dark);
  font-family: 'TTSemiBold';
}

.cancel-task-btn:hover{
  background-color: #ff3916;
}

#dateInput{
  height: 35px;
  box-sizing: border-box;
  padding: 0px 10px;
  border: 1px solid var(--hover-light);
  border-radius: 5px;
  background-color: transparent;
}


button{
  cursor: pointer;
}

.display-none{
  display: none;
}

.disabled-click{
  pointer-events: none;
  color: var(--hover-light)!important;
}

.invalid-input{
  border: 2px solid var(--tertiary-color-light) !important;
}

.checkbox{
  width: 18px;
  height: 18px;
  cursor: pointer;
}

.task-button-title{
  font-size: 15rem;
}

#currentTabName{
  color: var(--text-light);
}

.project-tasks-container-all-tasks{
  display: flex;
  flex-direction: column;
}

.project-name-all-tasks{
  color: var(--text-light);
  font-size: 18rem;
  font-family: 'TTBold';
}

.project-all-tasks-header{
  box-sizing: border-box;
  padding: 7px 0px;
  margin-bottom: 14px;
}

.project-icon-all-tasks{
  width: 24px;
  height: 24px;
  appearance: none;
  border: none;
  outline: none;
  background-color: transparent;
  background-image: url(./img/project.svg);
  background-repeat: no-repeat;
  background-size: contain;
  pointer-events: nonecio;
}

.tasks-container-all-tasks{
  margin-bottom: 15px;
}

.no-tasks-message{
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 15rem;
  color: var(--hover-light);
  border: 1px solid var(--hover-light);
  width: 110px;
  border-radius: 5px;
  pointer-events: none;
  box-sizing: border-box;
  padding: 3px 0px;
}

.no-tasks-img-container{
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.no-tasks-img{
  width: 300px;
}

.no-tasks-img-text{
  margin-top: 30px;
  font-size: 20rem;
  color: var(--text-light);
  text-align: center;
}

/*Media Queries*/

/* Smartphones (portrait and landscape) */
@media only screen and (max-width: 767px) {

  /* Hide the scrollbar track and thumb */
  ::-webkit-scrollbar {
    width: 0;
    height: 0;
  }

  /* Optional: Hide the scrollbar corner */
  ::-webkit-scrollbar-corner {
    display: none;
  }

  .body-container {
    grid-template-columns: 1fr;
    grid-template-rows: 55px repeat(11, 1fr);
  }

  .main {
    grid-area: 2 / 1 / -1 / -1;
    padding: 25px 20px 0px 20px;
  }

  #headerSection {
    grid-area: 1 / 1 / 1 / -1;
    height: auto;
  }

  .sidebar {
    position: absolute;
    z-index: 10;
    height: 100%;
    width: 70vw;
    padding-top: 60px;
    transform: translateX(-500px);
  }

  .sidebar-icon {
    display: block;
    width: 22px;
    height: 22px;
    position: absolute;
    z-index: 20;
    top: 20px;
    left: 20px;
    cursor: pointer;
  }

  #Open:checked~#sidebarMenu {
    transform: translateX(0px);
    transition: transform 350ms ease-in-out;
  }

  .btn-delete,
  .btn-rename {
    display: none;
  }

  .modal-body {
    padding: 17px;
  }

  .modal-header {
    font-size: 18rem;
  }

  .add-project-input {
    font-size: 15rem;
  }

  .add-project-buttons {
    font-size: 15rem;
  }

  .modal-title {
    font-size: 20rem;
  }

  #oldName {
    font-size: 20rem;
  }

  #deleteProjectName {
    font-size: 20rem;
  }

  .modal-alert {
    font-size: 14rem;
  }

  #mediaQueryHandler {
    display: none;
  }

  .tasks-list-view {
    padding: 30px 20px 90px 20px;
  }

  .delete-question {
    font-size: 15rem;
  }

  .home-heading {
    padding-bottom: 7px;
  }

  .add-section-button {
    margin: 0px 16px 16px 0px;
  }

  .task-data{
    flex-direction: column;
  }

  #dateInput{
    width: 100%;
    border: 2px solid var(--hover-light);
  }

  .add-task-form-buttons{
    justify-content: center;
  }

  .add-task-form-btn{
    padding: 10px 0px;
    flex: 1;
  }

  .cancel-task-btn{
    padding: 10px 0px;
    flex: 1;
  }

  .add-task-form-container{
    border: 2px solid var(--hover-light);
  }

  .border-bottom{
    border-bottom: 2px solid var(--hover-light);
  }

  .add-task-form-buttons{
    border-top: 2px solid var(--hover-light);
  }

  .task-description-input{
    border: 2px solid var(--hover-light);
  }

  .date-task-container{
    display: none;
  }

  .no-tasks-img-text{
    font-size: 17rem;
    padding: 0px 10px;
  }
}

/* Smartphones (portrait) */
@media only screen and (max-width: 480px) {
  /* Your CSS styles for portrait-oriented phones go here */
}
/* ... */

